# numpy

./: .gitignore  CMakeLists.txt  build.py  conanfile.py  conanfile.txt  project.conf
numpy/core/include/numpy/: __umath_generated.c  _numpyconfig.h  config.h
numpy/core/src/common/: npy_cpu_features.c
numpy/core/src/multiarray/: arraytypes.c  scalartypes.c
numpy/core/src/npymath/: ieee754.c
numpy/core/src/umath/: loops.c  loops.h  scalarmath.c  simd.inc
numpy/random/: _bounded_integers.c  _common.c  _generator.c  _mt19937.c  _pcg64.c  _philox.c  _sfc64.c  bit_generator.c  mtrand.c
scripts/: build-android.bat  build-headers.bat  build-ios.sh  build-macos.sh  build-pc.bat  build.bat  build.py
